--- a/accesibilidad.html
+++ b/accesibilidad.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="es">
-
 <head>
     <!-- META TAGS -->
     <meta name="viewport" content="width=device-width" , initial-scale="1" , shrink-to-fit="no">
@@ -46,7 +45,6 @@
     <!-- TITLE -->
     <title>Accesibilidad web - David Zapico</title>
 </head>
-
 <body class="blue">
     <header>
         <nav id="menu">
@@ -430,8 +428,6 @@
                 </p>
             </div>
         </div>
-
-
         <h3 style="margin-top: 50px;">Niveles de WCAG 2.0.</h3>
         <div class="contenedor-med2 border radius">
             <div class="caja-texto">
@@ -474,42 +470,51 @@
                         enlaces, contenido, etc.
                     </li> <br />
                     <li>
-                        Agrega texto alternativo a las imágenes: <br/>
+                        Agrega texto alternativo a las imágenes: <br />
                         Cuando introduces imágenes en WordPress , probablemente hayas visto este campo.
                     </li> <br />
                     <li>
-                        Elige tus colores con cuidado: <br/>
+                        Elige tus colores con cuidado: <br />
                         Al crear un esquema de color para un sitio web, asegúrate de que los colores de primer plano y
-                        fondo cumplan con el nivel de contraste mínimo requerido. Este es una relación de contraste de 4.5:1 para texto
+                        fondo cumplan con el nivel de contraste mínimo requerido. Este es una relación de contraste de
+                        4.5:1 para texto
                         estándar y 3:1 para texto grande.
                     </li> <br />
                     <li>
-                        Usa encabezados para estructurar tu contenido correctamente: <br/>
-                        Otra tarea clave para hacer que tu página web sea accesible es estructurar el contenido mediante el uso de
+                        Usa encabezados para estructurar tu contenido correctamente: <br />
+                        Otra tarea clave para hacer que tu página web sea accesible es estructurar el contenido mediante
+                        el uso de
                         encabezados ( H1, H2, H3 ). Hacer esto hará que tu contenido sea mucho más fácil de entender.
                     </li> <br />
                     <li>
-                        Diseña los formularios para que sean accesibles: <br/>
-                        Los formularios son un elemento común en la mayoría de las páginas web, pero deben diseñarse con cuidado y
-                        organizarse de manera lógica. Las instrucciones, claves para rellenarlo, campos de formulario obligatorios,
+                        Diseña los formularios para que sean accesibles: <br />
+                        Los formularios son un elemento común en la mayoría de las páginas web, pero deben diseñarse con
+                        cuidado y
+                        organizarse de manera lógica. Las instrucciones, claves para rellenarlo, campos de formulario
+                        obligatorios,
                         requisitos de formato de campo, etc. deben identificarse claramente.
                     </li> <br />
                     <li>
-                        No uses tablas para diseñar: <br/>
-                        Cuando se trata de mostrar datos, las tablas son útiles. Facilitan mucho a todos los usuarios, incluidos
+                        No uses tablas para diseñar: <br />
+                        Cuando se trata de mostrar datos, las tablas son útiles. Facilitan mucho a todos los usuarios,
+                        incluidos
                         aquellos que utilizan tecnologías asistivas , analizar una gran cantidad de datos.
                     </li> <br />
                     <li>
-                        Comprueba que al redimensionar el texto no se rompe la estructura de la página web: <br/>
-                        La mayoría de los dispositivos y navegadores permitirán a los usuarios cambiar el tamaño del texto, lo que puede
+                        Comprueba que al redimensionar el texto no se rompe la estructura de la página web: <br />
+                        La mayoría de los dispositivos y navegadores permitirán a los usuarios cambiar el tamaño del
+                        texto, lo que puede
                         ser útil para las personas con discapacidad visual. Sin embargo, si no creas
-                        tu página web para admitir esta función, cambiar el tamaño del texto podría romper su diseño o dificultar la
+                        tu página web para admitir esta función, cambiar el tamaño del texto podría romper su diseño o
+                        dificultar la
                         interacción con la página.
                     </li> <br />
                     <li>
-                        Archivos multimedia: <br/>
-                        La reproducción automática de archivos multimedia, es decir, que la música o los videos comiencen cuando se
-                        carga una página puede ser muy molesto , pero el problema es aún mayor en términos de accesibilidad.
+                        Archivos multimedia: <br />
+                        La reproducción automática de archivos multimedia, es decir, que la música o los videos
+                        comiencen cuando se
+                        carga una página puede ser muy molesto , pero el problema es aún mayor en términos de
+                        accesibilidad.
                     </li> <br />
                 </ol>
                 </p>
@@ -553,5 +558,4 @@
         <p>&copy; David Zapico | Proyecto diseño de interfaces web</p>
     </footer>
 </body>
-
 </html>
