--- a/planificacion.html
+++ b/planificacion.html
@@ -394,7 +394,8 @@
         <h3 style="padding-top: 50px;">Los Iconos</h3>
         <div class="contenedor background">
             <div class="izquierda">
-                <img src="assets/img/planificacion/iconos.png" width="400px" style="padding-top: 60px;" alt="iconos web">
+                <img src="assets/img/planificacion/iconos.png" width="400px" style="padding-top: 60px;"
+                    alt="iconos web">
             </div>
             <div class="derecha">
                 <div class="caja-texto" style="padding-top: 100px;">
