--- a/accesibilidad.html
+++ b/accesibilidad.html
@@ -204,7 +204,7 @@
     <div id="contenido">
         <h1>Accesibilidad web</h1>
         <h2>Concepto de accesibilidad web</h2>
-        <div class="contenedor-largo">
+        <div class="contenedor-largo-med">
             <div class="izquierda-esp-med border radius">
                 <div class="caja-texto" style="padding-top: 130px;">
                     <h3>Concepto y objetivos de la accesibilidad web</h3>
@@ -249,8 +249,8 @@
         </div>
         <h2 style="margin-top: 100px;">El consorcio World Wide Web(W3C)</h2>
         <h3>Que es, estructura y objetivos</h3>
-        <div class="contenedor-med border">
-            <div class="caja-texto">
+        <div class="contenedor-med1 border">
+            <div class="caja-texto" style="padding-top: 20px;">
                 <p>
                     El W3C (World Wide Web Consortium) es un comité que se dedica a implementar
                     tecnologías uniformes en el uso y desarrollo de Internet. El organismo fue fundado en
@@ -263,8 +263,8 @@
         </div>
         <h2 style="margin-top: 100px;">Evolución web</h2>
         <h3>Web 1.0. Los comienzos</h3>
-        <div class="contenedor border radius">
-            <div class="caja-texto" style="margin-top: 30px;">
+        <div class="contenedor-largo border radius">
+            <div class="caja-texto">
                 <p>
                     Web 1.0 se refiere a un estado de la World Wide Web. Es un término usado para describir la Web antes
                     del impacto de la «fiebre punto com» en el 2001, que es visto por muchos como el momento en que el
