--- a/planificacion.html
+++ b/planificacion.html
@@ -207,7 +207,7 @@
         <h3>El Color</h3>
         <div class="contenedor background">
             <div class="izquierda">
-                <div class="caja-texto" style="padding-top: 40px;">
+                <div class="caja-texto" style="padding-top: 20px;">
                     <h4>Modelo RGB</h4>
                     <p>
                         Debe su nombre a las iniciales de los tres colores primarios: Red (rojo), Green (verde) y Blue
@@ -256,7 +256,7 @@
                 </div>
             </div>
         </div>
-        <div class="contenedor-largo background">
+        <div class="contenedor-largo-med background">
             <div class="arriba">
                 <img src="assets/img/planificacion/hsv.png" alt="color hsv">
             </div>
@@ -314,24 +314,19 @@
                         el mundo real. <br /><br />
                     <ul>
                         <li>
-                            <p>El milímetro:</p>
-                            <p style="font-size: 10mm;">10mm</p>
-                        </li>
+                            <p style="font-size: 10mm;">El milímetro: 10mm</p>
+                        </li> <br />
                         <li>
-                            <p>El centímetro:</p>
-                            <p style="font-size: 1cm;">1cm</p>
-                        </li>
+                            <p style="font-size: 1cm;">El centímetro: 1cm</p>
+                        </li> <br />
                         <li>
-                            <p>La incha:</p>
-                            <p style="font-size: 0.4in;">0,4in</p>
-                        </li>
+                            <p style="font-size: 0.4in;">La incha: 0,4in</p>
+                        </li> <br />
                         <li>
-                            <p>El punto:</p>
-                            <p style="font-size: 30pt;">30pt</p>
-                        </li>
+                            <p style="font-size: 30pt;">El punto: 30pt</p>
+                        </li> <br />
                         <li>
-                            <p>La pica:</p>
-                            <p style="font-size: 2.5pc;">2,5pc</p>
+                            <p style="font-size: 2.5pc;">La pica: 2,5pc</p>
                         </li>
                     </ul>
                     </p>
@@ -342,39 +337,32 @@
                     <h4>Unidades de medida relativa:</h4>
                     <ul>
                         <li>
-                            <p>El porcentaje:</p>
-                            <p style="font-size: 250%;">250%</p>
-                        </li>
+                            <p style="font-size: 250%;">El porcentaje: 250%</p>
+                        </li> <br />
                         <li>
-                            <p>El em:</p>
-                            <p style="font-size: 2.5em;">2.5em</p>
-                        </li>
+                            <p style="font-size: 2.5em;">El em: 2.5em</p>
+                        </li> <br />
                         <li>
-                            <p>La vh:</p>
-                            <p style="font-size: 4vh;">4vh</p>
-                        </li>
+                            <p style="font-size: 4vh;">La vh: 4vh</p>
+                        </li> <br />
                         <li>
-                            <p>El vw:</p>
-                            <p style="font-size: 2vw;">2vw</p>
-                        </li>
+                            <p style="font-size: 2vw;">El vw: 2vw</p>
+                        </li> <br />
                         <li>
-                            <p>La vmin:</p>
-                            <p style="font-size: 3.5vmin;">Valor mínimo de vh</p>
-                        </li>
+                            <p style="font-size: 3.5vmin;">La vmin: Valor mínimo de vh</p>
+                        </li> <br />
                         <li>
-                            <p>La vmw:</p>
-                            <p style="font-size: 1vmw;">Valor mínimo de vw</p>
-                        </li>
+                            <p style="font-size: 1vmw;">La vmw: Valor mínimo de vw</p>
+                        </li> <br />
                         <li>
-                            <p>La rem:</p>
-                            <p style="font-size: 2.8rem;">2,8rem</p>
+                            <p style="font-size: 2.8rem;">La rem: 2,8rem</p>
                         </li>
                     </ul>
                 </div>
             </div>
             <div class="abajo-esp background radius">
-                <p style="padding-top: 30px;">
-                    <strong>¿Dónde clasificamos el píxel?</strong><br /><br />
+                <p>
+                    <strong>¿Dónde clasificamos el píxel?</strong><br />
                     El píxel es la unidad mínima de color que forma una imagen digital. También es la unidad física
                     mínima que forma una pantalla.
                     Hace unos años indudablemente era una medida absoluta que dependía del tamaño de píxel en milímetros
@@ -398,7 +386,7 @@
                     alt="iconos web">
             </div>
             <div class="derecha">
-                <div class="caja-texto" style="padding-top: 100px;">
+                <div class="caja-texto" style="padding-top: 60px;">
                     <p>
                         Un icono es, en informática, un pictograma que es utilizado para representar
                         archivos, carpetas, programas, unidades de almacenamiento, etc. En el uso
@@ -446,9 +434,9 @@
             </div>
         </div>
         <h3 style="padding-top: 50px;">Cuerpo de la página</h3>
-        <div class="contenedor-largo-med background">
+        <div class="contenedor-largo-med2 background">
             <div class="izquierda">
-                <div class="caja-texto" style="padding-top: 50px;">
+                <div class="caja-texto" style="padding-top: 20px;">
                     <p>
                         Es la parte de la web que presenta a la información específica sobre un tema concreto. El cuerpo
                         de la
@@ -485,8 +473,8 @@
             </div>
         </div>
         <h3 style="padding-top: 50px;">Pie de página</h3>
-        <div class="contenedor-largo-super-max background">
-            <div class="caja-texto" style="padding-top: 15px;">
+        <div class="contenedor-largo-super-max2 background radius">
+            <div class="caja-texto" style="padding-top: 40px;">
                 <p>
                     Está bien empezar por el principio: la definición. El footer o pie de página es la parte inferior de
                     una web y que, normalmente, encontrarás diferenciada del resto (cambios de color, de fuente,
@@ -556,7 +544,7 @@
             </div>
         </div>
         <h3 style="padding-top: 50px;">Espacios en blanco</h3>
-        <div class="contenedor-mini background">
+        <div class="contenedor-med background">
             <div class="caja-texto">
                 <p>
                     En términos de diseño web, son los espacios entre gráficos, columnas, imágenes, texto, márgenes, y
@@ -570,8 +558,8 @@
             </div>
         </div>
         <h3 style="padding-top: 50px;">Legibilidad</h3>
-        <div class="contenedor-mini-m background">
-            <div class="caja-texto">
+        <div class="contenedor-mini background">
+            <div class="caja-texto"  style="padding-top: 20px;">
                 <p>
                     El espacio en blanco es esencial para hacer legible el contenido de la web. Como diseñadores,
                     debemos considerar el espacio en blanco al elegir las especificaciones de la tipografía de diseño:
@@ -583,7 +571,7 @@
         </div>
         <h3 style="padding-top: 50px;">Diseño de tono y marca</h3>
         <div class="contenedor-mini-m background">
-            <div class="caja-texto" style="padding-top: 20px;">
+            <div class="caja-texto">
                 <p>
                     El espacio en blanco contribuye al tono del diseño general. Por ejemplo, los sitios web con mucho
                     espacio en blanco pueden reflejar minimalismo. Es por este motivo que el uso que hagamos de los
@@ -608,7 +596,7 @@
         </div>
         <h2 style="margin-top: 100px;">Maquetación web</h2>
         <div class="contenedor-mini background">
-            <div class="caja-texto" style="padding-top: 30px;">
+            <div class="caja-texto" style="padding-top: 20px;">
                 <p>
                     Maquetación mediante tablas y mediante <br /><br />
                     Lo primero de todo es definir qué es la maquetación endiseño web.El
@@ -620,7 +608,7 @@
         </div>
         <h2 style="margin-top: 100px;">Prototipo web</h2>
         <div class="contenedor-largo-super-medium background">
-            <div class="caja-texto" style="padding-top: 50px; padding-bottom:50px">
+            <div class="caja-texto" style="padding-top: 35px; padding-bottom:50px">
                 <p>
                     Un prototipo web consiste en un boceto, navegable o no, que permiten crear una referencia visual de
                     la estructura de una página web, definiendo al detalle el contenido y su distribución visual,
@@ -674,8 +662,8 @@
             </div>
         </div>
         <h2 style="margin-top: 100px;">Interacción persona-ordenador</h2>
-        <div class="contenedor-mini-m background">
-            <div class="caja-texto">
+        <div class="contenedor-mini background">
+            <div class="caja-texto" style="padding-top: 20px;">
                 <p>
                     La interacción persona-ordenador , es un subsector de la informática. Dentro de esta
                     disciplina científica se desarrollarán interfaces y sistemas interactivos entre humanos y
