--- a/accesibilidad.html
+++ b/accesibilidad.html
@@ -263,7 +263,7 @@
         </div>
         <h2 style="margin-top: 100px;">Evolución web</h2>
         <h3>Web 1.0. Los comienzos</h3>
-        <div class="contenedor-largo border radius">
+        <div class="contenedor border radius">
             <div class="caja-texto">
                 <p>
                     Web 1.0 se refiere a un estado de la World Wide Web. Es un término usado para describir la Web antes
@@ -310,8 +310,8 @@
         <iframe src="http://info.cern.ch/" width="100%" height="720" frameborder="1000"
             style="background-color: #ffffff; border-radius: 15px;"></iframe>
         <h3 style="margin-top: 50px;">Web 2.0. Un paso adelante</h3>
-        <div class="contenedor-mini-m border radius">
-            <div class="caja-texto">
+        <div class="contenedor-mini border radius">
+            <div class="caja-texto" style="padding-top: 20px;">
                 <p>
                     El término 'Web 2.0' o 'Web social'1 comprende aquellos sitios web que facilitan
                     compartir información, la interoperabilidad, el diseño centrado en el usuario y
@@ -325,8 +325,8 @@
         <iframe src="https://www.wikipedia.com" width="100%" height="720" frameborder="1000"
             style="background-color: #ffffff; border-radius: 15px;"></iframe>
         <h3 style="margin-top: 50px;">Web 3.0. Nuevos retos</h3>
-        <div class="contenedor-mini-m border radius">
-            <div class="caja-texto">
+        <div class="contenedor-mini border radius">
+            <div class="caja-texto" style="padding-top: 20px;">
                 <p>
                     Web 3.0 o web semántica, es una expresión que se utiliza para describir la evolución
                     del uso y la interacción de las personas en internet a través de diferentes formas entre
@@ -363,8 +363,8 @@
             </p>
         </div>
         <h3 style="margin-top: 50px;">Niveles de prioridad de las pautas WCAG 1.0.</h3>
-        <div class="contenedor-largo-med border radius">
-            <div class="caja-texto" style="margin-top: 20px;">
+        <div class="contenedor-largo-med2 border radius">
+            <div class="caja-texto">
                 <p>
                     Cada puesto de control tiene un nivel de prioridad asignado por el Grupo de Trabajo en función del
                     impacto del punto de control en la accesibilidad.
@@ -455,8 +455,8 @@
             </div>
         </div>
         <h2 style="margin-top: 100px;">Consejos para crear una web accesible</h2>
-        <div class="contenedor-largo-med2 border radius">
-            <div class="caja-texto" style="padding-top: 30px;">
+        <div class="contenedor-largo-max border radius">
+            <div class="caja-texto">
                 <p>
                 <ol>
                     <li>
