--- a/usabilidad.html
+++ b/usabilidad.html
@@ -220,7 +220,7 @@
             </div>
         </div>
         <img src="assets/img/usabilidad/usabilidad.jpg" alt="usabilidad web">
-        <div class="contenedor background radius">
+        <div class="contenedor-largo background radius">
             <div class="caja-texto">
                 <p>
                     Las principales claves para lograr optimizar nuestra web o blog a nivel de usabilidad son: <br/><br/>
@@ -269,7 +269,7 @@
         </div>
         <h2 style="margin-top: 100px;">Beneficios de cumplir con las directrices</h2>
         <div class="contenedor background radius">
-            <div class="caja-texto" style="padding-top: 30px;">
+            <div class="caja-texto">
                 <p>
                     <ul>
                         <li>
@@ -307,8 +307,8 @@
         </div>
         <h2 style="margin-top: 100px;">SEO, posicionamiento de los motores de búsqueda</h2>
         <img src="assets/img/usabilidad/seo.png" width="60%" alt="seo web">
-        <div class="contenedor-largo background radius">
-            <div class="caja-texto" style="padding-top: 30px;">
+        <div class="contenedor-largo-med background radius">
+            <div class="caja-texto">
                 <p>
                     Conjunto de acciones y técnicas que se emplean para mejorar el posicionamiento (la
                     visibilidad) en buscadores de un sitio web en Internet, dentro de los resultados
