--- a/usabilidad.html
+++ b/usabilidad.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="es">
-
 <head>
     <!-- META TAGS -->
     <meta name="viewport" content="width=device-width" , initial-scale="1" , shrink-to-fit="no">
@@ -46,7 +45,6 @@
     <!-- TITLE -->
     <title>Usabilidad web - David Zapico</title>
 </head>
-
 <body class="white">
     <header>
         <nav id="menu">
@@ -223,32 +221,42 @@
         <div class="contenedor-largo background radius">
             <div class="caja-texto">
                 <p>
-                    Las principales claves para lograr optimizar nuestra web o blog a nivel de usabilidad son: <br/><br/>
+                    Las principales claves para lograr optimizar nuestra web o blog a nivel de usabilidad son:
+                    <br /><br />
                 <ul>
                     <li>
-                        Estructurar muy bien los contenidos y organizarlos de acuerdo con una jerarquía perfectamente definida.
-                    </li> <br/>
+                        Estructurar muy bien los contenidos y organizarlos de acuerdo con una jerarquía perfectamente
+                        definida.
+                    </li> <br />
                     <li>
-                        El diseño debe ser “limpio”, con una utilización de los textos, tipografía, imágenes y recursos gráficos que
-                        faciliten la labor del usuario a la hora de encontrar lo que busca, procurando que los distintos contenidos
+                        El diseño debe ser “limpio”, con una utilización de los textos, tipografía, imágenes y recursos
+                        gráficos que
+                        faciliten la labor del usuario a la hora de encontrar lo que busca, procurando que los distintos
+                        contenidos
                         (artículos, bloques de contenidos...) se muestren separados y con una clasificación lógica.
-                    </li> <br/>
+                    </li> <br />
                     <li>
-                        Ceder el control al usuario. Para que su experiencia sea positiva, el usuario de nuestra página no debe
-                        sentirse perdido en ningún momento. Siempre debe saber dónde se encuentra y cómo acceder a otro enlace. Para
-                        ello, el menú debe ser muy accesible y visible, y los títulos de los contenidos de cada apartado deben ser muy
+                        Ceder el control al usuario. Para que su experiencia sea positiva, el usuario de nuestra página
+                        no debe
+                        sentirse perdido en ningún momento. Siempre debe saber dónde se encuentra y cómo acceder a otro
+                        enlace. Para
+                        ello, el menú debe ser muy accesible y visible, y los títulos de los contenidos de cada apartado
+                        deben ser muy
                         claros y estar estratégicamente colocados.
-                    </li> <br/>
+                    </li> <br />
                     <li>
-                        Facilitar la interactuación. También es muy importante que el usuario pueda hacer muchas cosas de forma fácil
+                        Facilitar la interactuación. También es muy importante que el usuario pueda hacer muchas cosas
+                        de forma fácil
                         e intuitiva: desplegar menús, descargar información, ampliar fotos o gráficos, etc.
-                    </li> <br/>
+                    </li> <br />
                     <li>
-                        Simplificar y sintetizar. Toda información superflua debe eliminarse o reducirse al máximo. Para esto hay una
+                        Simplificar y sintetizar. Toda información superflua debe eliminarse o reducirse al máximo. Para
+                        esto hay una
                         regla básica: “todo lo que no es necesario sobra”.
-                    </li> <br/>
+                    </li> <br />
                     <li>
-                        Adaptar la web a todo tipo de dispositivos: Otro elemento básico es la adecuar la web a móviles y tablets
+                        Adaptar la web a todo tipo de dispositivos: Otro elemento básico es la adecuar la web a móviles
+                        y tablets
                         porque, cada vez, son mas los usuarios que utilizan estos dispositivos para navegar por la red.
                     </li>
                 </ul>
@@ -259,10 +267,13 @@
         <div class="contenedor-mini background radius">
             <div class="caja-texto">
                 <p>
-                    <strong>Colocar menús de navegación en todas las páginas</strong>, ya que los usuarios no siempre entran por la home.
+                    <strong>Colocar menús de navegación en todas las páginas</strong>, ya que los usuarios no siempre
+                    entran por la home.
                     <strong>No abusar de las ventanas emergentes</strong> (pop-ups).
-                    <strong>Añadir un mapa del sitio web</strong> para guiar al usuario y a los rastreadores de Google, especialmente si la web contiene mucho contenido. Puedes aprender más cómo hacerlo, aquí.
-                    <strong>No abusar de las animaciones u otros elementos que puedan distraer al usuario</strong>. Mantener un <strong>diseño coherente</strong> en toda la web y sus distintos enlaces.
+                    <strong>Añadir un mapa del sitio web</strong> para guiar al usuario y a los rastreadores de Google,
+                    especialmente si la web contiene mucho contenido. Puedes aprender más cómo hacerlo, aquí.
+                    <strong>No abusar de las animaciones u otros elementos que puedan distraer al usuario</strong>.
+                    Mantener un <strong>diseño coherente</strong> en toda la web y sus distintos enlaces.
                     <strong>Revisar y adaptar la versión móvil</strong> de todas las páginas de la web.
                 </p>
             </div>
@@ -271,37 +282,37 @@
         <div class="contenedor background radius">
             <div class="caja-texto">
                 <p>
-                    <ul>
-                        <li>
-                            Mejorar la experiencia y satisfacción de los visitantes.
-                        </li> <br/>
-                        <li>
-                            Lograr una mayor comunicación y feedback con el usuario.
-                        </li> <br/>
-                        <li>
-                            Conseguir más tráfico.
-                        </li> <br/>
-                        <li>
-                            Aumentar la duración de las visitas.
-                        </li> <br/>
-                        <li>
-                            Disminuir el porcentaje de rebote.
-                        </li> <br/>
-                        <li>
-                            Fidelizar a los usuarios, logrando que nos vuelvan a visitar la web.
-                        </li> <br/>
-                        <li>
-                            Facilitar que los usuarios recomienden la web, generando más visitas
-                            adicionales.
-                        </li> <br/>
-                        <li>
-                            Lograr que el usuario se familiarice antes con la página y que su manejo sea
-                            fácil e intuitivo.
-                        </li> <br/>
-                        <li>
-                            Aumentar los ingresos y las ventas a través de la página.
-                        </li>
-                    </ul>
+                <ul>
+                    <li>
+                        Mejorar la experiencia y satisfacción de los visitantes.
+                    </li> <br />
+                    <li>
+                        Lograr una mayor comunicación y feedback con el usuario.
+                    </li> <br />
+                    <li>
+                        Conseguir más tráfico.
+                    </li> <br />
+                    <li>
+                        Aumentar la duración de las visitas.
+                    </li> <br />
+                    <li>
+                        Disminuir el porcentaje de rebote.
+                    </li> <br />
+                    <li>
+                        Fidelizar a los usuarios, logrando que nos vuelvan a visitar la web.
+                    </li> <br />
+                    <li>
+                        Facilitar que los usuarios recomienden la web, generando más visitas
+                        adicionales.
+                    </li> <br />
+                    <li>
+                        Lograr que el usuario se familiarice antes con la página y que su manejo sea
+                        fácil e intuitivo.
+                    </li> <br />
+                    <li>
+                        Aumentar los ingresos y las ventas a través de la página.
+                    </li>
+                </ul>
                 </p>
             </div>
         </div>
@@ -312,44 +323,44 @@
                 <p>
                     Conjunto de acciones y técnicas que se emplean para mejorar el posicionamiento (la
                     visibilidad) en buscadores de un sitio web en Internet, dentro de los resultados
-                    orgánicos en los motores de búsqueda. <br/><br/>
-                    <ul>
-                        <li>
-                            Configuración del fichero robots.txt.
-                        </li> <br/>
-                        <li>
-                            Comprueba que lo que ve el usuario en el navegador es lo que ve
-                            Googlebot.
-                        </li> <br/>
-                        <li>
-                            Asegurate que los ficheros CSS, JS e imágenes no están bloqueados por robots.
-                        </li> <br/>
-                        <li>
-                            Enlaces rotos o errores de crawlabilidad.
-                        </li> <br/>
-                        <li>
-                            Errores de Servidor - Error 500 o 503.
-                        </li> <br/>
-                        <li>
-                            Acceso denegado ( Comprobar el fichero robots.txt ) - Código de respuesta
-                            403.
-                        </li> <br/>
-                        <li>
-                            Errores 404 ( urls no se encuentran ).
-                        </li> <br/>
-                        <li>
-                            Comprobar que el renderizado del HTML es correcto.
-                        </li> <br/>
-                        <li>
-                            Validar los datos estructurados o schema.
-                        </li> <br/>
-                        <li>
-                            Configurar URL's con parámetros en Search Console.
-                        </li> <br/>
-                        <li>
-                            Actualización del Sitemap XML vs Sitemap HTML vs RSS.
-                        </li>
-                    </ul>
+                    orgánicos en los motores de búsqueda. <br /><br />
+                <ul>
+                    <li>
+                        Configuración del fichero robots.txt.
+                    </li> <br />
+                    <li>
+                        Comprueba que lo que ve el usuario en el navegador es lo que ve
+                        Googlebot.
+                    </li> <br />
+                    <li>
+                        Asegurate que los ficheros CSS, JS e imágenes no están bloqueados por robots.
+                    </li> <br />
+                    <li>
+                        Enlaces rotos o errores de crawlabilidad.
+                    </li> <br />
+                    <li>
+                        Errores de Servidor - Error 500 o 503.
+                    </li> <br />
+                    <li>
+                        Acceso denegado ( Comprobar el fichero robots.txt ) - Código de respuesta
+                        403.
+                    </li> <br />
+                    <li>
+                        Errores 404 ( urls no se encuentran ).
+                    </li> <br />
+                    <li>
+                        Comprobar que el renderizado del HTML es correcto.
+                    </li> <br />
+                    <li>
+                        Validar los datos estructurados o schema.
+                    </li> <br />
+                    <li>
+                        Configurar URL's con parámetros en Search Console.
+                    </li> <br />
+                    <li>
+                        Actualización del Sitemap XML vs Sitemap HTML vs RSS.
+                    </li>
+                </ul>
                 </p>
             </div>
         </div>
