--- a/propiedad.html
+++ b/propiedad.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <!-- META TAGS -->
     <meta name="viewport" content="width=device-width" , initial-scale="1" , shrink-to-fit="no">
@@ -45,7 +46,8 @@
     <!-- TITLE -->
     <title>Derechos de la propiedad intelectual - David Zapico</title>
 </head>
-<body>
+
+<body class="blue">
     <header>
         <nav id="menu">
             <div class="menu-item">
@@ -112,7 +114,8 @@
                     <div class="icon-box gb b">
                         <div class="icon"><i class="fas fa-code"></i></div>
                         <div class="text"><a href="assets/pdfs/Etiquetas Semánticas HTML5.pdf" target="_blank">
-                                <div class="title">Etiquetas Semánticas HTML5 <i class="fas fa-external-link-alt"></i></div>
+                                <div class="title">Etiquetas Semánticas HTML5 <i class="fas fa-external-link-alt"></i>
+                                </div>
                                 <div class="sub-text">Diseño Interfaces</div>
                             </a>
                         </div>
@@ -143,7 +146,9 @@
                     </div>
                     <div class="icon-box gb f">
                         <div class="icon"><i class="fab fa-searchengin"></i></div>
-                        <div class="text"><a href="assets/pdfs/Accesibilidad_web_y_SEO_capitulo_ampliado_olga_carreras.pdf" target="_blank">
+                        <div class="text"><a
+                                href="assets/pdfs/Accesibilidad_web_y_SEO_capitulo_ampliado_olga_carreras.pdf"
+                                target="_blank">
                                 <div class="title">Accesibilidad y SEO <i class="fas fa-external-link-alt"></i></div>
                                 <div class="sub-text">Olga Carreras</div>
                             </a>
@@ -199,21 +204,98 @@
         </nav>
     </header>
     <div id="contenido">
-        <h1></h1>
+        <h1>Derechos de la propiedad intelectual</h1>
+        <div class="contenedor-med2 border radius">
+            <div class="izquierda" style="padding-top: 40px;">
+                <img src="assets/img/propiedad/propiedad.png" width="50%" alt="imagen de propiedad intelectual">
+            </div>
+            <div class="derecha" style="padding-top: 40px;">
+                <p>
+                    La <strong>propiedad intelectual</strong> (Art.10 TRLPI) es la disciplina jurídica que protege las creaciones
+                    originales
+                    literarias, artísticas o científicas, expresadas por cualquier medio o soporte, tangible o
+                    intangible,
+                    actualmente conocido o que se invente en el futuro. La propiedad intelectual protege además los
+                    derechos de los artistas intérpretes o ejecutantes, de los productores de fonogramas y de los
+                    organismos de radiodifusión.
+                </p>
+            </div>
+        </div>
 
 
 
+        <h2 style="margin-top: 100px;">Derechos de la propiedad intelectual</h2>
+        <h3>Derechos morales</h3>
+
+
+
+        <h3 style="margin-top: 50px">Derechos de carácter patrimonial</h3>
+
+
+
+        <h4 style="margin-top: 30px;">Derechos relacionados con la explotación de la obra</h4>
+
+        <h4 style="margin-top: 30px;">Derechos exclusivos</h4>
+
+
+        <h4 style="margin-top: 30px;">Derechos de remuneración</h4>
+
+
+
+        <h4 style="margin-top: 30px;">Derechos compensatorios</h4>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+        <h2 style="margin-top: 100px;"> Derechos de autor y copyright</h2>
+        <h3>Derechos de autor y copyright</h3>
+
+
+
+        <h3 style="margin-top: 50px;">¿Cuándo pasa a ser del dominio público?</h3>
+
+
+        
+        <h2 style="margin-top: 100px;">Licencias de software</h2>
+
+        <h2 style="margin-top: 100px;">Tipos de licencias creative commons</h2>
+        <h3>Condiciones: Reconocimiento-BY, No Comercial-NCNo Derivadas-ND, Compartir Igual-SA:</h3>
+
+
+        <h3 style="margin-top: 50px;">Licencias</h3>
+
+
+
+
+        <h2 style="margin-top: 100px;">Copyleft</h2>
 
 
 
         <div class="next">
-            <p>Siguiente página <i class="far fa-arrow-right"></i> <a href="imagenes.html"><i class="far fa-images"></i> imágenes</a>.</p>
+            <p>Siguiente página <i class="far fa-arrow-right"></i> <a href="imagenes.html"><i class="far fa-images"></i>
+                    imágenes</a>.</p>
         </div>
     </div>
     <div id="info-box">
         <ul>
             <li><a target="_blank" href="https://www.awwwards.com/academy/">Awwwards Academy</a></li>
-            <li><a target="_blank" href="https://www.alohacreativos.com/blog/que-es-el-diseno-web">Articulo diseño web</a></li>
+            <li><a target="_blank" href="https://www.alohacreativos.com/blog/que-es-el-diseno-web">Articulo diseño
+                    web</a></li>
             <li><a target="_blank" href="https://gitlab.com/davidzapicom/Proyecto-dweb">Gitlab Repo</a></li>
         </ul>
     </div>
@@ -221,4 +303,5 @@
         <p>&copy; David Zapico | Proyecto diseño de interfaces web</p>
     </footer>
 </body>
+
 </html>
