--- a/propiedad.html
+++ b/propiedad.html
@@ -211,7 +211,8 @@
             </div>
             <div class="derecha" style="padding-top: 40px;">
                 <p>
-                    La <strong>propiedad intelectual</strong> (Art.10 TRLPI) es la disciplina jurídica que protege las creaciones
+                    La <strong>propiedad intelectual</strong> (Art.10 TRLPI) es la disciplina jurídica que protege las
+                    creaciones
                     originales
                     literarias, artísticas o científicas, expresadas por cualquier medio o soporte, tangible o
                     intangible,
@@ -221,60 +222,93 @@
                 </p>
             </div>
         </div>
-
-
-
         <h2 style="margin-top: 100px;">Derechos de la propiedad intelectual</h2>
         <h3>Derechos morales</h3>
-
-
-
+        <div class="contenedor-mini-m border radius">
+            <div class="caja-texto">
+                <p>
+                    El derecho moral es un derecho personalisimo del autor, que tiene como característica ser
+                    irrenunciable e inalienable y como finalidad proteger a la persona del autor a través de su obra. El
+                    derecho moral no protege a toda persona, sino sólo a la del autor y lo hace a través del producto de
+                    su creación.
+                </p>
+            </div>
+        </div>
         <h3 style="margin-top: 50px">Derechos de carácter patrimonial</h3>
-
-
-
-        <h4 style="margin-top: 30px;">Derechos relacionados con la explotación de la obra</h4>
-
+        <h4>Derechos relacionados con la explotación de la obra</h4>
+        <div class="contenedor-mini border radius">
+            <div class="caja-texto">
+                <p>
+                    Los derechos patrimoniales o de explotación deben ser considerados como un conjunto, es decir, como
+                    todas las posibilidades de explotación o disfrute económico derivadas de la utilización de la obra,
+                    cubriendo cualquier utilización. Mantienen una gran relación con los derechos morales, dado que
+                    permiten excluir o autorizar los usos de la obra, es decir, el autor o su causahabiente decide quien
+                    podrá
+                    utilizar su obra y quien no. Los derechos de explotación o patrimoniales se dividen en dos grupos:
+                    Derechos exclusivos y derechos de simple remuneración.
+                </p>
+            </div>
+        </div>
         <h4 style="margin-top: 30px;">Derechos exclusivos</h4>
-
-
+        <div class="contenedor-mini-m border radius">
+            <div class="caja-texto" style="padding-top: 20px;">
+                <p>
+                    Los derechos exclusivos son aquellos que permiten a su titular autorizar o prohibir los actos de
+                    explotación de su obra o prestación protegida por el usuario, y a exigir de este una retribución a
+                    cambio de la autorización que le conceda.
+                </p>
+            </div>
+        </div>
         <h4 style="margin-top: 30px;">Derechos de remuneración</h4>
-
-
-
+        <div class="contenedor-mini border radius">
+            <div class="caja-texto" style="padding-top: 20px;">
+                <p>
+                    Los derechos de remuneración, a diferencia de los derechos exclusivos, no facultan a su titular a
+                    autorizar o prohibir los actos de explotación de su obra o prestación protegida por el usuario,
+                    aunque sí obligan a este al pago de una cantidad dineraria por los actos de explotación que realice,
+                    cantidad esta que es determinada, bien por la ley o en su defecto por las tarifas generales de las
+                    entidades de gestión.
+                </p>
+            </div>
+        </div>
         <h4 style="margin-top: 30px;">Derechos compensatorios</h4>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+        <div class="contenedor-mini-m border radius">
+            <div class="caja-texto">
+                <p>
+                    Derechos compensatorios, como el derecho por copia privada que compensa los derechos de propiedad
+                    intelectual dejados de percibir por razón de las reproducciones de las obras o prestaciones
+                    protegidas para uso exclusivamente privado del copista.
+                </p>
+            </div>
+        </div>
         <h2 style="margin-top: 100px;"> Derechos de autor y copyright</h2>
         <h3>Derechos de autor y copyright</h3>
+
+
 
 
 
         <h3 style="margin-top: 50px;">¿Cuándo pasa a ser del dominio público?</h3>
 
 
-        
+
+
+
         <h2 style="margin-top: 100px;">Licencias de software</h2>
+
+
+
+
+
+
+
 
         <h2 style="margin-top: 100px;">Tipos de licencias creative commons</h2>
         <h3>Condiciones: Reconocimiento-BY, No Comercial-NCNo Derivadas-ND, Compartir Igual-SA:</h3>
+
+
+
+
 
 
         <h3 style="margin-top: 50px;">Licencias</h3>
@@ -282,7 +316,13 @@
 
 
 
+
+
         <h2 style="margin-top: 100px;">Copyleft</h2>
+
+
+
+
 
 
 
@@ -300,7 +340,7 @@
         </ul>
     </div>
     <footer>
-        <p>&copy; David Zapico | Proyecto diseño de interfaces web</p>
+        <p>David Zapico | Proyecto diseño de interfaces web</p>
     </footer>
 </body>
 
