--- a/accesibilidad.html
+++ b/accesibilidad.html
@@ -555,7 +555,7 @@
         </ul>
     </div>
     <footer>
-        <p>&copy; David Zapico | Proyecto diseño de interfaces web</p>
+        <p>David Zapico | Proyecto diseño de interfaces web</p>
     </footer>
 </body>
 </html>
