--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
         </ul>
     </div>
     <footer>
-        <p>&copy; David Zapico | Proyecto diseño de interfaces web</p>
+        <p>David Zapico | Proyecto diseño de interfaces web</p>
     </footer>
 </body>
 </html>
