--- a/pdfs.html
+++ b/pdfs.html
@@ -227,7 +227,7 @@
         </ul>
     </div>
     <footer>
-        <p>&copy; David Zapico | Proyecto diseño de interfaces web</p>
+        <p>David Zapico | Proyecto diseño de interfaces web</p>
     </footer>
 </body>
 </html>
