--- a/planificacion.html
+++ b/planificacion.html
@@ -688,7 +688,7 @@
         </ul>
     </div>
     <footer>
-        <p>&copy; David Zapico | Proyecto diseño de interfaces web</p>
+        <p>David Zapico | Proyecto diseño de interfaces web</p>
     </footer>
 </body>
 </html>
